[gd_scene load_steps=4 format=3 uid="uid://bu7apry3h8fy3"]

[ext_resource type="Theme" uid="uid://45e84j2sj7w0" path="res://src/UI/Theme/LaputaTheme.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://dnp411d6d8mqr" path="res://src/UI/MoneyNumber.tscn" id="3"]
[ext_resource type="Script" uid="uid://devpib32r2gsd" path="res://src/UI/ShopTooltip.gd" id="4"]

[node name="ShopTooltip" type="Node2D"]
position = Vector2(-112, -176)
z_index = 5
script = ExtResource("4")

[node name="Panel" type="Panel" parent="."]
offset_right = 224.0
offset_bottom = 128.0
theme = ExtResource("2")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
offset_right = 224.0
offset_bottom = 128.0
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 208.0
offset_bottom = 112.0
theme_override_constants/separation = 16

[node name="ItemName" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
offset_right = 192.0
offset_bottom = 14.0
text = "Necklace"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 192.0
offset_bottom = 95.0
text = "Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyNumber" parent="." instance=ExtResource("3")]
position = Vector2(32, 24)
